Fixed calculation for height. Was getting an unnecessary veritcal scrollbar.

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -38,7 +38,7 @@
  height:calc(~"100vh - 148px");
  }
  #mainContainer{
-  height:calc(~"100vh - 104px");
+  height:calc(~"100vh - 105px");
   }
   .dashboardContainer {
       height:calc(~"100vh - 116px");
